--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "author": "Joshua Comeau",
   "scripts": {
-    "start": "live-server --port=9000 --host=localhost ."
+    "start": "live-server --port=9000 --host=localhost --browser='Microsoft Edge Dev'",
+    "devserver": "live-server --browser='Microsoft Edge Dev'"
   },
   "dependencies": {
     "live-server": "1.2.1"
